--- a/app/views/clients/new.html.erb
+++ b/app/views/clients/new.html.erb
@@ -1,6 +1,9 @@
 <h1>利用者追加</h1>
 <%= form_with(model: @client, url: clients_path(@client), local: true, method: :post) do |f| %>
 
+  <%= f.label "利用者名［ふりがな］", class: "label-#{yield(:class_text)}" %>
+  <%= f.text_field :client_name_japanese, class: "form-control" %>
+  
   <%= f.label :利用者名, class: "label-#{yield(:class_text)}" %>
   <%= f.text_field :client_name, class: "form-control" %>
 
@@ -23,9 +26,9 @@
     <%= f.check_box :date_of_day, {multiple: true}, "日", nil %>日
   
   <br><%= f.label :性別, class: "label-#{yield(:class_text)}" %>
-  <br><%= f.radio_button :sex, :男, checked: "checked" %>
+  <br><%= f.radio_button :sex, :男性, checked: "checked" %>
         <%= f.label "男性", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :sex, :女, checked: "checked" %>
+        <%= f.radio_button :sex, :女性, checked: "checked" %>
         <%= f.label "女性", class: "label-#{yield(:class_text)}" %>
   
   <br><%= f.label :生年月日, class: "label-#{yield(:class_text)}" %>
