--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -22,7 +22,9 @@
       <% end %>
         </td>
         <td>
-      
+      <% @asesments.each do |asesment| %>
+          <%=link_to %>
+      <% end %>
         </td>
       </tr>
     </tbody>
