--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -5,7 +5,8 @@
     <thead>
       <tr>
         <th>利用者情報編集</th>
-        <th>利用者名</th>
+        <th>(ふりがな)
+        <br>利用者名</th>
         <th>電話番号</th>
         <th>住所</th>
         <th>介護度</th>
@@ -23,7 +24,8 @@
       <% @clients.each do |client| %>
         <tr>
           <td><%= link_to "利用者情報編集", edit_basic_info_client_path(client) %></td>
-          <td><%= client.client_name %>様</td>
+          <td>(<%= client.client_name_japanese %>)
+          <br><%= client.client_name %>様</td>
           <td><%= client.telephone_number %></td>
           <td><%= client.client_email %></td>
           <td><%= client.nursing_number %></td>
