--- a/app/assets/stylesheets/asesments.scss
+++ b/app/assets/stylesheets/asesments.scss
@@ -6,7 +6,7 @@ table{
   }
   
   th{
-    width: 10%;
+    width: auto;
   }
   
   td{
@@ -14,5 +14,5 @@ table{
   }
 
   th,td{
-    border:solid 3px ;
+    border:solid 2px ;
   }
