--- a/app/views/kaminari/_next_page.html.erb
+++ b/app/views/kaminari/_next_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <span class="next">
-  <%= link_to_unless current_page.last?, t('次へ').html_safe, url, rel: 'next', remote: remote %>
+   &emsp;<%= link_to_unless current_page.last?, t('次').html_safe, url, rel: 'next', remote: remote %>
 </span>
