--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,18 +4,17 @@
   <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
       <tr>
-        <th>利用者情報編集</th>
-        <th>(ふりがな)
+        <th class="center">利用者情報編集</th>
+        <th class="center">(ふりがな)
         <br>利用者名</th>
-        <th>電話番号</th>
-        <th>住所</th>
-        <th>介護度</th>
-        <th>利用日</th>
-        <th>性別</th>
-        <th>生年月日</th>
-        <th>モニタリング（利用者情報報告書）</th>
-        <th>業務日誌</th>
-        <th>退所</th>
+        <th class="center">電話番号</th>
+        <th class="center">住所</th>
+        <th class="center">介護度</th>
+        <th class="center">利用日</th>
+        <th class="center">性別</th>
+        <th class="center">生年月日</th>
+        <th class="center">利用者詳細</th>
+        <th class="center">退所</th>
       </tr>
     </thead>
 
@@ -23,18 +22,17 @@
     <tbody>
       <% @clients.each do |client| %>
         <tr>
-          <td><%= link_to "利用者情報編集", edit_basic_info_client_path(client) %></td>
-          <td>(<%= client.client_name_japanese %>)
+          <td class="center"><%= link_to "編集", edit_basic_info_client_path(client), class: "btn btn-success" %></td>
+          <td class="center"><small>(<%= client.client_name_japanese %>)</small>
           <br><%= client.client_name %>様</td>
-          <td><%= client.telephone_number %></td>
-          <td><%= client.client_email %></td>
-          <td><%= client.nursing_number %></td>
-          <td><%= client.date_of_day %></td>
-          <td><%= client.sex %></td>
-          <td><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %></td>
-          <td><%= link_to "利用者情報一覧",client_path(client) %></td>
-          <td><%= link_to "業務日誌"%></td>
-          <td><%= link_to "退所", client_path(client), method: :delete,
+          <td class="center"><%= client.telephone_number %></td>
+          <td class="center"><%= client.client_email %></td>
+          <td class="center"><%= client.nursing_number %></td>
+          <td class="center"><%= client.date_of_day %></td>
+          <td class="center"><%= client.sex %></td>
+          <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %></td>
+          <td class="center"><%= link_to "利用者詳細",client_path(client) %></td>
+          <td class="center"><%= link_to "退所", client_path(client), method: :delete,
                     data: { confirm: "削除してよろしいですか？" },
                     class: "btn btn-danger" %></td>
       <% end %>
