--- a/app/views/kaminari/_last_page.html.erb
+++ b/app/views/kaminari/_last_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <span class="last">
-  <%= link_to_unless current_page.last?, t('最後のページ').html_safe, url, remote: remote %>
+   &emsp;<%= link_to_unless current_page.last?, t('最後のページ').html_safe, url, remote: remote %>
 </span>
