--- a/app/views/kaminari/_prev_page.html.erb
+++ b/app/views/kaminari/_prev_page.html.erb
@@ -7,5 +7,5 @@
     remote:        data-remote
 -%>
 <span class="prev">
-  <%= link_to_unless current_page.first?, t('前へ').html_safe, url, rel: 'prev', remote: remote %>
+   &emsp;<%= link_to_unless current_page.first?, t('前').html_safe, url, rel: 'prev', remote: remote %>
 </span>
