--- a/app/assets/stylesheets/asesments.scss
+++ b/app/assets/stylesheets/asesments.scss
@@ -16,3 +16,15 @@ table{
   th,td{
     border:solid 2px ;
   }
+
+  .th.sample{
+    width: 100%;
+    height: 100%;
+    text-align:center;
+  }
+
+  .parent{
+    padding: 10%;
+    margin: 10%;
+    width: 25%;
+  }
