--- a/app/views/business_log/new_business_log.html.erb
+++ b/app/views/business_log/new_business_log.html.erb
@@ -1,13 +1,13 @@
 <div class="center">
   <meta charset = " utf-8 " />
 		<h1>個別記録</h1>
-		<%=form_with( model: @log, url: create_asesment_basic_info_client_asesments_path(@client, @asesment), local: true, method: :post) do |f| %>
+		<%=form_with( model: @log, url: create_business_log_client_business_log_index_path(@client, @log), local: true, method: :post) do |f| %>
 			<p><span class="under">氏名&emsp;<%= @client.client_name %>様</span></p>
 			<table align="center" cellspacing="", cellpadding="5">
 				<tr>
 					<th><%= f.date_select(:log_year, discard_month:true)+'年'%>
 							<%= f.date_select(:log_month, discard_year:true)+'日' %>
-							</th>
+					</th>
 				</tr>		
 				<tr>
 					<th class ="center" rowspan = "2"><div class ="center">[送迎]</div>
@@ -36,25 +36,51 @@
 					<%= f.check_box  :log_foods ,{}, "true", "false"%>
 					<%= f.label "利用", class: "label-#{yield(:class_text)}" %>
 					</th>
-					<th class ="center">主食
+					<th class ="center" colspan= "2">［主食］
 					<br><%= f.select :log_good_staple_dosage,[['1/5'],['2/5'],['3/5'],['4/5'],['ほ全'],['全'],['0'],['1くち'],['2~3くち']],{ include_blank: true} %></th>
+					<th></th>
 				</tr>
 				<tr>
-					<th class ="center">副食
+					<th class ="center" colspan= "2">［副食］
 					<br><%= f.select :log_good_side_dosage,[['1/5'],['2/5'],['3/5'],['4/5'],['ほ全'],['全'],['0'],['1くち'],['2~3くち']],{ include_blank: true} %></th>
+					<th></th>
 				</tr>
 				<tr>
-					<th class ="center" rowspan= "2">バイタル</th>
-					<th class ="center">体温
-					<br><%= f.text_area :log_body_temperature, class: "hoge", size: "4x1" %>℃</th>
-					<th class ="center">血圧
+					<th class ="center">[バイタル]</th>
+					<th class ="center">[体温]
+					<br><%= f.text_area :log_body_temperature, class: "hoge", size: "3x1" %>℃</th>
+					<th class ="center">[血圧]
 					<br><%= f.text_area :log_pressure_up, class: "hoge", size: "3x1" %>/
 					<%= f.text_area :log_pressure_down, class: "hoge", size: "3x1" %></th>
-					<th class ="center">脈
+					<th class ="center">[脈]
 					<br><%= f.text_area :log_pulse, class: "hoge", size: "3x1" %></th>
-					<th class ="center"rowpan="2"></th>
-				</tr>	
+					<th class ="center"rowpan="2">［再検査］
+					<br><%= f.check_box :log_check_return ,{}, "true", "false"%></th>
+					<th class ="center">[血圧]<br><%= f.text_area :log_pressure_up, class: "hoge", size: "3x1" %>/
+					<%= f.text_area :log_pressure_down, class: "hoge", size: "3x1" %></th>
+					<th class ="center">[体温]<br><%= f.text_area :log_body_temperature, class: "hoge", size: "3x1" %>℃</th>
+					<th class ="center">[脈]<br><%= f.text_area :log_pulse, class: "hoge", size: "3x1" %></th>
+				</tr>
+				<tr>
+					<th class ="center" colspan= "8">
+						うがい
+						<%= f.check_box  :check_log_hand_washing ,{}, "true", "false"%>
+						&emsp;&emsp;&emsp;&emsp; 食後歯磨き
+						<%= f.check_box :check_log_brush_teeth ,{}, "true", "false"%>
+					</th>
+				</tr>
+				<tr>
+					<th colspan = "6" rowspan= "2">
+						[特記事項]
+						<%= f.text_area :log_pulse, class: "hoge", size: "100x4" %>
+					</th>
+					<th class = "center"colspan= "2">
+					[記録者印]
+					</th>
+				</tr>
+				<th class ="center" colspan= "2"><%= f.text_area :log_record_stamp, class: "hope", size: "4x1" %></th>	
 			</table>
+			<br><%= f.submit "追加", class: "btn btn-primary " %>
 		<% end %>
 </div>					
 						
