--- a/app/views/static_pages/top.html.erb
+++ b/app/views/static_pages/top.html.erb
@@ -7,7 +7,7 @@
   <p>アカウント作成は<%= link_to "こちら", signup_path, class: "btn primary" %>から</p>
   <% else %>
   <%= link_to "ログイン", login_path, class: "btn btn-lg btn-primary" %>
-  <p>アカウント作成は<%= link_to "こちら", signup_path, class: "btn primary" %>から</p>
+  <p>アカウント作成は<%= link_to "こちら", new_staff_path, class: "btn primary" %>から</p>
   <% end %>
 
 </div>
