--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -4,16 +4,17 @@
   <table class="table table-bordered table-condensed table-hover" id="table-clientes">
     <thead>
       <tr>
+        <th class= "center">利用</th>
+        <th class= "center">利用者情報報告書作成</th>
         <th class="center">利用者情報編集</th>
         <th class="center">(ふりがな)
         <br>利用者名</th>
         <th class="center">電話番号</th>
-        <th class="center">住所</th>
         <th class="center">介護度</th>
         <th class="center">利用日</th>
         <th class="center">性別</th>
         <th class="center">生年月日</th>
-        <th class="center">利用者詳細</th>
+        <th class="center">詳細</th>
         <th class="center">退所</th>
       </tr>
     </thead>
@@ -22,16 +23,17 @@
     <tbody>
       <% @clients.each do |client| %>
         <tr>
+          <td class= "center"><%= link_to "本日利用", monitoring_basic_info_client_monitorings_path(client), class: "btn btn-primary" %></td>
+          <td class= "center"><%= link_to "新規作成", monitoring_basic_info_client_monitorings_path(client), class: "btn btn-primary" %></td>
           <td class="center"><%= link_to "編集", edit_basic_info_client_path(client), class: "btn btn-success" %></td>
           <td class="center"><small>(<%= client.client_name_japanese %>)</small>
           <br><%= client.client_name %>様</td>
           <td class="center"><%= client.telephone_number %></td>
-          <td class="center"><%= client.client_email %></td>
           <td class="center"><%= client.nursing_number %></td>
           <td class="center"><%= client.date_of_day %></td>
           <td class="center"><%= client.sex %></td>
           <td class="center"><%= client.client_birthday.strftime("%F")if client.client_birthday.present? %></td>
-          <td class="center"><%= link_to "利用者詳細",client_path(client) %></td>
+          <td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
           <td class="center"><%= link_to "退所", client_path(client), method: :delete,
                     data: { confirm: "削除してよろしいですか？" },
                     class: "btn btn-danger" %></td>
