--- a/app/views/staffs/show.html.erb
+++ b/app/views/staffs/show.html.erb
@@ -1,197 +1,6 @@
-<% provide(:title, @user.name) %>
-<div>
-  <table class="table table-bordered table-condensed user-table">
-    <tr>
-      <td>
-          <%= link_to "⇦ ", user_path(date: @first_day.prev_month), class: "btn btn-info" %>
-        【<%= l(@first_day, format: :middle) %>】時間管理表
-          <%= link_to " ⇨", user_path(date: @first_day.next_month), class: "btn btn-info" %>
-      </td>
-      <td>指定勤務開始時間: <%= format_basic_info(@user.designated_work_start_time) %>
-      <br>指定勤務終了時間: <%= format_basic_info(@user.designated_work_end_time) %></br>
-      </td>
-      <td colspan=3>基本時間：<%= format_basic_info(@user.basic_time) %></td>
-      <td>初日：<%= l(@first_day, format: :short) %></td>
-    </tr>
-
-    <tr>
-      <td>所属：<%= @user.department.present? ? @user.department : "未所属" %></td>
-      <td>名前：<%= @user.name %></td>
-      <td>コード: <%= @user.employee_number %></td>
-      <td></td>
-      <td>出勤日数：<%= @worked_sum %>日</td>
-      <td>締め：<%= l(@last_day, format: :short) %></td>
-    </tr>
-  </table>
+<div class= "center">
+        <h1><%= @staff.name %>さん00の里へようこそ！<^0^></h1>
+        <p>業務専用サイトです！まずは、利用者一覧ページを開いてください！</p>
+																	↓↓↓
+        <br><%= link_to "利用者ー覧", clients_path, class: "btn btn-primary"%>
 </div>
-<% if current_user.nurse? %>
-<div>
-  <% if @user_one_month_attendance_count != 0 %>
-    <%= link_to"[所属長承認のお知らせ]", edit_superior_approval_user_attendances_path(@user), remote: true, class: "text-danger" %>
-    <a style="color:#ff0000" data-remote="true">
-    <%= "#{@user_one_month_attendance_count}件のお知らせ"  %>
-    </a>
-  <% else %>
-    [所属長承認のお知らせ]
-  <% end %>  
-</div>
-<div>
-  <% if @overchange_count != 0 %>
-    <%= link_to"[勤怠変更お知らせ]", attendance_change_user_attendances_path(@user), remote: true, class: "text-danger" %>
-    <a style="color:#ff0000" data-remote="true">
-    <%= "#{@overchange_count}件のおしらせ" %>
-    </a>
-  <% else %>
-    [勤怠変更お知らせ]
-  <% end %>  
-</div>
-<div>
-  <% if @overwork_count != 0 %>
-    <%= link_to "[残業申請のお知らせ]", edit_superior_announcement_user_attendances_path(@user), remote: true, class: "text-danger" %>
-    <a style="color:#ff0000" data-remote="true">
-    <%= "#{@overwork_count}件のおしらせ" %>
-    </a>
-  <% else %>
-    [残業申請のお知らせ]
-  <% end %>
-</div>
-<% end %>  
-
-<br><div class="btn-users-show">
-<%= link_to "勤怠を編集", attendances_edit_one_month_user_path(date: @first_day), class: "btn btn-success" %>
-<%= link_to "CSV出力", user_path(format: :csv), class: "btn btn-success" %>
-<br><%= link_to "勤怠修正ログ（承認済）",attendance_log_user_path(@user), remote: true, class: "btn btn-success" %></br>
-</div>
-
-<div>
-  <table class="table table-bordered table-condensed table-hover" id="table-attendances">
-    <thead>  
-      <tr>
-        <th rowspan="2"></th>
-        <th rowspan = "3">日付</th>
-        <th rowspan = "3">曜日</th>
-        <th colspan="8">【実績】</th>
-        <th colspan="5">所定外勤務</th>
-      </tr>
-      <tr>
-        <th colspan="3">出社</th>
-        <th colspan="3">退社</th>
-        <th rowspan="2">在社時間</th>
-        <th rowspan="2">備考</th>
-        <th colspan="2">終了予定時間</th>
-        <th rowspan="2">時間外時間</th>
-        <th rowspan="2">業務処理内容</th>
-        <th rowspan="2">指示者確認</th>
-      </tr>
-      <tr>
-        <th>残業申請</th>
-        <th>時</th>
-        <th>分</th>
-        <th></th>
-        <th>時</th>
-        <th>分</th>
-        <th></th>
-        <th>時</th>
-        <th>分</th>
-      </tr>
-    </thead>
-
-
-    <tbody>
-      <% @attendances.each do |day| %>
-        <% css_class = 
-          case %w{日 月 火 水 木 金 土}[day.worked_on.wday]
-          when '土'
-            'text-primary'
-          when '日'
-            'text-danger'
-          end %>
-        <tr>
-          <td><%= link_to "残業申請", edit_overwork_request_user_attendance_path(@user, day), remote: true, class: "btn btn-primary" %></td>
-          <td><%= l(day.worked_on, format: :short) %></td>
-          <td class="<%= css_class %>"><%= %w{日 月 火 水 木 金 土}[day.worked_on.wday] %></td>
-          <td><%= day.started_at.strftime('%-H') if day.started_at.present? %></td>
-          <td><%= day.started_at.floor_to(15.minutes).strftime('%M') if day.started_at.present? %></td>
-          <td>
-            <% if attendance_state(day) && day.started_at.blank? %>
-             <%= link_to "出社", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-            <% end %>
-          </td>
-          </td>
-          <td><%= day.finished_at.strftime('%-H') if day.finished_at.present? %></td>
-          <td><%= day.finished_at.floor_to(15.minutes).strftime('%M') if day.finished_at.present? %></td>
-          <td>
-            <% if attendance_state(day) && day.started_at.present? &&  day.finished_at.blank? %>
-              <%= link_to "退社", user_attendance_path(@user, day), method: :patch, class: "btn btn-primary btn-attendance" %>
-            <% end %>  
-          </td>
-          <td>
-            <% if day.started_at.present? && day.finished_at.present? %>
-              <%= str_times = working_times(day.started_at.floor_to(15.minutes), day.finished_at.floor_to(15.minutes)) %>
-              <% @total_working_times = @total_working_times.to_f + str_times.to_f %>
-            <% end %>
-          </td>
-          <td><%= day.note %></td>
-          <td><%= day.plan_finished_at.strftime('%H') if day.plan_finished_at.present? %></td>
-          <td><%= day.plan_finished_at.strftime('%M') if day.plan_finished_at.present? %></td>
-          <td>
-            <% if day.plan_finished_at.present? %> 
-              <%= over_time(day.tomorrow, day.plan_finished_at, @user.designated_work_end_time, day.started_at) %>
-            <% end %>
-          </td>
-          <td><%= day.business_processing_contents %></td>
-          <td>
-            <% if day.overtime_status == "申請中" %> 
-              <%= "#{day.instructor_confirmation}へ申請中" %>
-            <% elsif day.overtime_status == "承認" %>
-              <%= "#{day.instructor_confirmation}残業承認" %>
-            <% elsif day.overtime_status == "否認" %>
-              <%= "#{day.instructor_confirmation}残業否認" %>
-            <% elsif day.overtime_status == "なし" %>
-              <%= "#{day.instructor_confirmation}残業なし" %>
-            <% end %>
-            <% if day.change_status == "申請中" %>
-              <%= "#{day.instructor_confirmation}勤怠編集申請中" %>
-            <% elsif day.change_status == "承認" %>
-              <%= "#{day.instructor_confirmation}勤怠編集承認 確認済" %>
-            <% elsif day.change_status == "否認" %>
-              <%= "#{day.instructor_confirmation}勤怠編集否認 確認済" %>
-            <% elsif day.change_status == "なし" %>
-              <%= "#{day.instructor_confirmation}勤怠編集なし 確認済" %>
-            <% end %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-    <tfoot>
-      <%= form_with(model: @user, url: update_show_user_attendances_path(@user), method: :patch, local: true) do |f| %>
-        <%= f.hidden_field :first_day, :value => @first_day %>
-        <tr>
-          <td></td>
-          <td colspan = "2"></td>
-          <td colspan = "6"></td>
-          <td><%= format("%.2f", @total_working_times.to_f) %></td>
-          <td colspan="5"></td>
-          <td>
-            <% if @attendance_first_day.user_one_month_attendance_status.blank? %>
-              <%= "所属長 未" %>
-            <% elsif @attendance_first_day.user_one_month_attendance_status == "申請中" %> 
-              <%= "#{@attendance_first_day.instructor_confirmation}へ申請中" %>
-            <% elsif @attendance_first_day.user_one_month_attendance_status == "承認" %>
-              <%= "#{@attendance_first_day.instructor_confirmation}承認" %>
-            <% elsif @attendance_first_day.user_one_month_attendance_status == "否認" %>
-              <%= "#{@attendance_first_day.instructor_confirmation}否認" %>
-            <% end %>
-          <br><%= f.collection_select :instructor_confirmation, @superior, :name, :name %>
-          <br><%= f.submit "申請", class: "btn btn-primary" %></td>
-        </tr>
-      <% end %>      
-    </tfoot>
-  </table>
-</div>
-<div id="attendance-change" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="edit-superior-approval" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="edit-overwork-request" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="attendance-log" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-<div id="edit-superior-announcement" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true"></div>
-    
