本日の業務日誌一覧

--- a/app/views/clients/edit_basic_info.html.erb
+++ b/app/views/clients/edit_basic_info.html.erb
@@ -39,5 +39,5 @@
   
   
   
-  <%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
+  <br><%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
 <% end %>
