--- a/app/views/businesslogs/businesslog_clients.html.erb
+++ b/app/views/businesslogs/businesslog_clients.html.erb
@@ -7,15 +7,18 @@
         <th class="center">利用者名</th>
         <th class="center">詳細</th>
 			</tr>
-			<%=form_with( model: @businesslog, url: create_businesslog_client_now_client_businesslogs_path(@client, @businesslog, @clients), local: true, method: :post) do |f| %>
-				<tbody>
+			<%= form_with( model: @client, url: update_businesslog_client_now_client_businesslogs_path(@client), local: true, method: :patch) do |f| %>
 					<% @clients.each do |client| %>
-						<tr>
-							<td><%= f.check_box :business_log_use_check ,{}, "true", "false" %></td>
-							<td class= "center"><%=client.client_name %></td>
-							<td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
-						</tr>
+						<%= f.fields_for "businesslogs[]", client do |a| %> 
+							<tbody>
+								<tr>
+									<td><%= f.check_box :business_log_use_check ,{}, "true", "false" %></td>
+									<td class= "center"><%=client.client_name %></td>
+									<td class="center"><%= link_to "詳細",client_path(client),class: "btn btn-primary" %></td>
+								</tr>
+							</tbody>
+						<% end %>
 					<% end %>
-				</tbody>
+				<br><%= f.submit "追加", class: "btn btn-primary " %>
 			<% end %>	
 		</table>				
