--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -15,8 +15,8 @@
       <tr>
         <td>
       <% @monitorings.each do |monitoring| %>
-        <br><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"), 
-             monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %></br>
+        <br><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"),monitoring_completion_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %>
+            <%= link_to "編集", monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %></br>
       <% end %>
         <%= paginate(@monitorings) %>
         </td>
