--- a/app/views/businesslogs/new_businesslog.html.erb
+++ b/app/views/businesslogs/new_businesslog.html.erb
@@ -72,7 +72,7 @@
 				<tr>
 					<th colspan = "6" rowspan= "2">
 						[特記事項]
-						<%= f.text_area :log_pulse, class: "hoge", size: "100x4" %>
+						<%= f.text_area :log_special_mention, class: "hoge", size: "100x4" %>
 					</th>
 					<th class = "center"colspan= "2">
 					[記録者印]
