--- a/app/assets/stylesheets/monitorings.scss
+++ b/app/assets/stylesheets/monitorings.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the monitorings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// #test {
+//     height:200px;
+//     min-width: none;
+//     padding: 5px;
+//     margin-bottom: 5px;
+//     border: 1px
+//     solid #333333;
+//   }
