--- a/app/views/asesments/asesment_affter.html.erb
+++ b/app/views/asesments/asesment_affter.html.erb
@@ -133,7 +133,7 @@
       <tr>
         <th class= "center" rowspan= "1" nowrap>服薬</th>
         <th><span class="under">通所介護利用時の服薬内容</span>
-          <%= f.text_area :nomal_vital_blood_pressure_down, class: "hoge", size: "50x2" %>
+          <%= f.text_area :medicina, class: "hoge", size: "50x2" %>
           <br><%= f.label "情報源", class: "label-#{yield(:class_text)}" %>
           <br>
           <%= f.radio_button :information_medicina,"本人"%>本人
@@ -154,7 +154,7 @@
           <%= f.radio_button :hedge_medicine_food_information, "ケアマネージャー" %>ケアマネージャー
           <br><%= f.radio_button :hedge_medicine_food_information,"かかりつけ医" %>かかりつけ医
           <%= f.radio_button :hedge_medicine_food_information, "その他" %>その他
-          <%= f.text_area :hedge_medicine_food_information, class: "hoge", size: "20x1" %>
+          <%= f.text_area :hedge_medicine_food_information_1, class: "hoge", size: "20x1" %>
       </tr>
       <tr>
         <th class= "center" colspan= "4">かかりつけ医
