--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -29,8 +29,8 @@
         </td>
         <td>
           <% @businesslogs.each do |log| %>
-          <br><%= link_to log.log_year.strftime("%Y年")+log.log_month.strftime("%-m月%-d日"),
-           affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-primary"%></br>
+          <br><%= link_to log.log_year.strftime("%Y年")+log.log_month.strftime("%-m月%-d日"),businesslog_completion_client_businesslog_path(@client, log), class: "btn btn-primary" %>
+          <%= link_to "編集", affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-primary"%></br>
           <% end %>
           <%= paginate(@businesslogs) %>
         </td>
