--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,6 +7,7 @@
         <% if logged_in? %>
           <li><%= link_to "利用者ー覧", clients_path %></li>
           <li><%= link_to "本日の利用者チェック",businesslog_clients_client_path(current_staff) %></li>
+          <li><%= link_to "従業員一覧", staffs_path %></li>
           <li class="dropdown">
                <%= link_to "ログアウト", logout_path, method: :delete %>
               </li>
