--- a/app/views/staffs/_staff.html.erb
+++ b/app/views/staffs/_staff.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: staff, url:  update_basic_info_staff_path(staff), local: true, method: :patch) do |f| %>
+<%= form_with(model: @staff, url:  update_basic_info_staff_path(@staff), local: true, method: :patch) do |f| %>
   <%= render 'shared/error_messages',  object: staff %>
 
   <%= f.label :name, class: "label-#{yield(:class_text)}" %>
@@ -7,26 +7,7 @@
   <%= f.label :email, class: "label-#{yield(:class_text)}" %>
   <%= f.email_field :email, class: "form-control" %>
 
-  <%= f.label :department, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :department, class: "form-control" %>
-  
-  <%= f.label :社員番号, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :employee_number, class: "form-control" %>
-  
-  <%= f.label :カードID, class: "label-#{yield(:class_text)}" %>
-  <%= f.text_field :uid, class: "form-control" %>
-  
-  <%= f.label :password, class: "label-#{yield(:class_text)}" %>
-  <%= f.password_field :password, class: 'form-control' %>
-  
-  <%= f.label :基本勤務時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.time_field :basic_time, class: "form-control" %>
-  
-  <%= f.label :指定勤務開始時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.time_field :designated_work_start_time, class: "form-control" %>
-  
-  <%= f.label :指定勤務終了時間, class: "label-#{yield(:class_text)}" %>
-  <%= f.time_field :designated_work_end_time, class: "form-control" %>
+ 
   
   <%= f.submit :編集する, class: "btn btn-primary btn-block btn- active btn-#{yield(:class_text)}" %>
 <% end %>
