--- a/app/views/staffs/index.html.erb
+++ b/app/views/staffs/index.html.erb
@@ -1,44 +1,22 @@
   <% provide(:title, 'All Staffs') %>
   <h1>職員一覧</h1>
-  <p>検索</p>
- 
-   
-  <%= form_tag import_path, multipart: true do %>
-  <%= file_field_tag :file %>
-  <%= submit_tag "インポート" %>
-  <% end %>
+
   
   <%= will_paginate %>
   <div class="col-md-10 col-md-offset-1">
     
-      <table class="table">
+    <table class="table">
       <% @staffs.each do |staff| %>
         <tr>
           <td>
-          <% if current_staff.admin? && !current_staff?(staff) %>
-            <%= staff.name %><br>
+            <%= staff.name %>
             <%= link_to "削除", staff, method: :delete,
                   data: { confirm: "削除してよろしいですか？" },
                   class: "btn btn-primary" %>
-            <br>
-          <div class="panel-group">
-            <div class="panel panel-default">
-              <div class="panel-heading">
-                <h4 class="panel-title">
-                  <button type="button" data-toggle="collapse" data-target="#collapse<%= staff.id %>" class="btn btn-primary btn-lg">編集</button>
-                </h4>
-              </div>
-              <div id="collapse<%= staff.id %>" class="panel-collapse collapse">
-                <div class="panel-body"><%= render 'staff', {staff: staff} %></div> 
-                </div>
-              </div>
-            </div>
-          </div>  
-          <% end %>
           </td>
         </tr>
       <% end %>
-      </table>
+    </table>
       <%= will_paginate %>
   </div>
 
