--- a/app/views/clients/businesslog_clients_index.html.erb
+++ b/app/views/clients/businesslog_clients_index.html.erb
@@ -1,9 +1,9 @@
 <h1>本日の利用者業務日誌一覧</h1>
 
 <div class="center">
-	<%= form_with( model: @client, url: create_businesslog_client_businesslogs_path(@client, @businesslog), local: true, method: :post) do |f| %>
+	<%= form_with( model: @businesslog, url:businesslog_clients_create_client_path(@clients, @client.businesslogs.build ), local: true, method: :post) do |f| %>
 		<% @clients.each do |client| %>
-			<%= f.fields_for "clients[]", client do |c| %>
+			<%= f.fields_for client.businesslogs.build, client do |c| %>
 				<p><span class="under">氏名&emsp;<%= client.client_name %>様</span></p>
 				<table align="center" cellspacing="", cellpadding="5">
 					<tr>
@@ -30,7 +30,7 @@
 							<%= c.label "プラン無", class: "label-#{yield(:class_text)}" %>
 							<%= c.radio_button  :log_bath, "中止" %>
 							<%= c.label "中止", class: "label-#{yield(:class_text)}" %>
-							<br>機械浴 &nbsp;<%= f.radio_button :log_bath, "機械浴 利用" %>
+							<br>機械浴 &nbsp;<%= c.radio_button :log_bath, "機械浴 利用" %>
 							<%= c.label "利用", class: "label-#{yield(:class_text)}" %>
 						</th>
 							<th class ="center" rowspan = "2">
@@ -58,7 +58,7 @@
 								<br><%= c.text_area :log_pulse, class: "hoge", size: "3x1" %></th>
 								<th class ="center"rowpan="2">［再検査］
 								<br><%= c.check_box :log_check_return ,{}, "true", "false"%></th>
-								<th class ="center">[血圧]<br><%= f.text_area :re_log_pressure_up, class: "hoge", size: "3x1" %>/
+								<th class ="center">[血圧]<br><%= c.text_area :re_log_pressure_up, class: "hoge", size: "3x1" %>/
 								<%= c.text_area :re_log_pressure_down, class: "hoge", size: "3x1" %></th>
 								<th class ="center">[体温]<br><%= c.text_area :re_log_body_temperature, class: "hoge", size: "3x1" %>℃</th>
 								<th class ="center">[脈]<br><%= c.text_area :re_log_pulse, class: "hoge", size: "3x1" %></th>
@@ -85,8 +85,8 @@
 					</table>
 							<%= c.check_box :check_log ,{}, "true", "false" %>
 							確認
-				<br><%= c.submit "追加", class: "btn btn-primary " %>
 			<% end %>
 		<% end %>
+		<br><%= f.submit "追加", class: "btn btn-primary " %>
 	<% end %>
 </div>					
