--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -22,8 +22,8 @@
         </td>
         <td>
         <% @asesments.each do |asesment| %>
-          <br><%= link_to asesment.asesment_create_year.strftime("%Y年")+asesment.asesment_create_day.strftime("%-m月%-d日"),
-              asesment_affter_client_asesment_path(@client, asesment), class: "btn btn-primary" %></br>
+          <br><%= link_to asesment.asesment_create_year.strftime("%Y年")+asesment.asesment_create_day.strftime("%-m月%-d日"), asesment_completion_client_asesment_path(@client,asesment), class: "btn btn-primary" %>
+          <%= link_to "編集", asesment_affter_client_asesment_path(@client, asesment), class: "btn btn-primary" %></br>
         <% end %>
         <%= paginate(@asesments) %>
         </td>
@@ -33,6 +33,7 @@
           <%= link_to "編集", affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-primary"%></br>
           <% end %>
           <%= paginate(@businesslogs) %>
+          <%= link_to "業務日誌コピー専用ページ", businesslog_completion_copy_client_businesslog_path(@client, @businesslogs) %>
         </td>
       </tr>
     </tbody>
