業務日誌個人一覧完成

--- a/app/views/businesslogs/new_businesslog.html.erb
+++ b/app/views/businesslogs/new_businesslog.html.erb
@@ -1,7 +1,7 @@
 <div class="center">
   <meta charset = " utf-8 " />
 		<h1>個別記録</h1>
-		<%=form_with( model: @businesslog, url: create_businesslog_client_businesslogs_path(@client, @businesslog), local: true, method: :post) do |f| %>
+		<%=form_with( model: @businesslog, url: create_businesslog_client_businesslogs_path(@client, @businesslog, @businesslogs), local: true, method: :post) do |f| %>
 			<p><span class="under">氏名&emsp;<%= @client.client_name %>様</span></p>
 			<table align="center" cellspacing="", cellpadding="5">
 				<tr>
