--- a/app/views/businesslogs/businesslog_completion_copy.html.erb
+++ b/app/views/businesslogs/businesslog_completion_copy.html.erb
@@ -1,10 +1,10 @@
 <div class="center">
   <meta charset = " utf-8 " />
 		<h1>個別記録</h1>
-		<%=form_with( model: @businesslog, url: update_businesslog_client_businesslog_path(@client, @businesslogs, @businesslog), local: true, method: :patch) do |f| %>
+		<%=form_with( model: @businesslogs, url: update_businesslog_client_businesslog_path(@client, @businesslogs, @businesslog), local: true, method: :patch) do |f| %>
 			<p><span class="under">氏名&emsp;<%= @client.client_name %>様</span></p>
 			<% @businesslogs.each do |log| %>
-				<table align="center" cellspacing="", cellpadding="5">
+				<br><table align="center" cellspacing="", cellpadding="5">
 					<tr>
 					<% css_class = 
 												case %w{日 月 火 水 木 金 土}[log.log_month.wday]
@@ -21,29 +21,65 @@
 					</tr>		
 					<tr>
 						<th class ="center" rowspan = "2"><div class ="center">[送迎]</div>
-						<%= f.radio_button :log_farewell, "往復" %>
+					 	<% if log.log_farewell == "往復" %>
+						<input type="radio" value="往復" name="log_farewell" id="businesslog_save" checked>
+						<% else %>
+						<input type="radio" value="往復" name="log_farewell" id="businesslog_save">
+						<% end %>
 						<%= f.label "往復", class: "label-#{yield(:class_text)}" %>
-						<%= f.radio_button  :log_farewell, "片道" %>
+						<% if log.log_farewell == "片道" %>
+						<input type="radio" value="片道" name="log_farewell" id="businesslog_save" checked>
+						<% else %>
+						<input type="radio" value="片道" name="log_farewell" id="businesslog_save">
+						<% end %>
 						<%= f.label "片道", class: "label-#{yield(:class_text)}" %>
-						<br><%= f.radio_button :log_farewell, "ケアハウス" %>
+						<% if log.log_farewell == "ケアハウス" %>
+						<br><input type="radio" value="ケアハウス" name="log_farewell" id="businesslog_save" checked>
+						<% else %>
+						<br><input type="radio" value="ケアハウス" name="log_farewell" id="businesslog_save">
+						<% end %>
 						<%= f.label "ケアハウス", class: "label-#{yield(:class_text)}" %>
 						</th>
 						<th rowspan = "2" colspan= "3"class= "center">
 						<div class ="center">[入浴]</div>
-						一般浴 &nbsp;<%= f.radio_button :log_bath, "利用" %>
+						<% if log.log_bath == "利用" %>
+						一般浴 &nbsp;<input type="radio" value="利用" name="log_bath" id="businesslog_save" checked>
+						<% else %>
+						一般浴 &nbsp;<input type="radio" value="利用" name="log_bath" id="businesslog_save">
+						<% end %>
 						<%= f.label "利用", class: "label-#{yield(:class_text)}" %>
-						<%= f.radio_button :log_bath, "シャワー浴" %>
+						<% if log.log_bath == "シャワー浴" %>
+						<input type="radio" value="シャワー浴" name="log_bath" id="businesslog_save" checked>
+						<% else %>
+						<input type="radio" value="シャワー浴" name="log_bath" id="businesslog_save">
+						<% end %>
 						<%= f.label "シャワー浴", class: "label-#{yield(:class_text)}" %>
-						<%= f.radio_button  :log_bath, "プラン無し" %>
+						<% if log.log_bath == "プラン無し" %>
+						<input type="radio" value="プラン無し" name="log_bath" id="businesslog_save" checked>
+						<% else %>
+						<input type="radio" value="プラン無し" name="log_bath" id="businesslog_save" >
+						<% end %>
 						<%= f.label "プラン無", class: "label-#{yield(:class_text)}" %>
-						<%= f.radio_button  :log_bath, "中止" %>
+						<% if log.log_bath == "中止" %>
+						<input type="radio" value="中止" name="log_bath" id="businesslog_save" checked>
+						<% else %>
+						<input type="radio" value="中止" name="log_bath" id="businesslog_save">
+						<% end %>
 						<%= f.label "中止", class: "label-#{yield(:class_text)}" %>
-						<br>機械浴 &nbsp;<%= f.radio_button :log_bath, "機械浴 利用" %>
+						<% if log.log_bath == "機械浴 利用" %>
+						<br>機械浴 &nbsp;<input type="radio" value="機械浴 利用" name="log_bath" id="businesslog_save" checked>
+						<% else %>
+						<br>機械浴 &nbsp;<input type="radio" value="機械浴 利用" name="log_bath" id="businesslog_save">
+						<% end %>
 						<%= f.label "利用", class: "label-#{yield(:class_text)}" %>
 						</th>
 						<th class ="center" rowspan = "2">
 						<div class ="center">［食事］</div>
-						<%= f.check_box  :log_foods ,{}, "true", "false"%>
+						<% if log.log_foods == true %>
+						<input type="checkbox" value= true name="log_foods" id="businesslog_save" checked>
+						<% else %>
+						<input type="checkbox" value= false name="log_foods" id="businesslog_save">
+						<% end %>
 						<%= f.label "利用", class: "label-#{yield(:class_text)}" %>
 						</th>
 						<th class ="center" colspan= "2">［主食］
@@ -65,7 +101,11 @@
 						<th class ="center">[脈]
 						<br>【<%= log.log_pulse %>】</th>
 						<th class ="center"rowpan="2">［再検査］
-						<br><%= f.check_box :log_check_return ,{}, "true", "false"%></th>
+						<% if log.log_check_return == true %>
+						<br><input type="checkbox" value= true name="log_check_return" id="businesslog_save" checked>
+						<% else %>
+						<br><input type="checkbox" value= false name="log_check_return" id="businesslog_save">
+						<% end %>
 						<th class ="center">[血圧]<br>【<%= log.re_log_pressure_up %>/
 						<%= log.re_log_pressure_down %>】</th>
 						<th class ="center">[体温]<br>【<%= log.re_log_body_temperature %>℃】</th>
@@ -74,15 +114,23 @@
 					<tr>
 						<th class ="center" colspan= "8">
 							うがい
-							<%= f.check_box  :check_log_hand_washing ,{}, "true", "false"%>
+							<% if log.check_log_hand_washing == true %>
+							<input type="checkbox" value= true name="check_log_hand_washing" id="businesslog_save" checked>
+							<% else %>
+							<input type="checkbox" value= false name="check_log_hand_washing" id="businesslog_save">
+							<% end %>
 							&emsp;&emsp;&emsp;&emsp; 食後歯磨き
-							<%= f.check_box :check_log_brush_teeth ,{}, "true", "false"%>
+							<% if log.check_log_brush_teeth == true %>
+							<input type="checkbox" value= true name="check_log_brush_teeth" id="businesslog_save" checked>
+							<% else %>
+							<input type="checkbox" value= false name="check_log_brush_teeth" id="businesslog_save">
+							<% end %>
 						</th>
 					</tr>
 					<tr>
 						<th colspan = "6" rowspan= "2">
 							[特記事項]
-							<%= f.text_area :log_special_mention, class: "hoge", size: "100x4" %>
+							<textarea name="log_special_mention" rows="4" cols="100"><%= log.log_special_mention %></textarea>
 						</th>
 						<th class = "center"colspan= "2">
 						[記録者印]
