--- a/app/views/asesments/asesment_new.html.erb
+++ b/app/views/asesments/asesment_new.html.erb
@@ -202,7 +202,7 @@
         </tr>                    
     </table>
     <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
-        <%= f.check_box :check_a, {checked: false}, "true", "false" %>
+        <%= f.check_box :check_a, {checked: true}, "true", "false" %>
     <br><%= f.submit "追加", class: "btn btn-primary " %>
   <% end %>
 </div>        
