--- a/app/views/businesslogs/clients_index.html.erb
+++ b/app/views/businesslogs/clients_index.html.erb
@@ -83,8 +83,8 @@
 							<th class ="center" colspan= "2"><%= c.text_area :log_record_stamp, class: "hope", size: "4x1" %>
 							</th>	
 					</table>
-							<%= c.check_box :check_log ,{}, "true", "false" %>
-							確認
+							<%= c.check_box :check_log ,{checked: true}, "true", "false" %>
+							
 			<% end %>
 		<% end %>
 		<br><%= f.submit "追加", class: "btn btn-primary " %>
