--- a/app/views/monitorings/monitoring_basic_info.html.erb
+++ b/app/views/monitorings/monitoring_basic_info.html.erb
@@ -10,16 +10,16 @@
     </span></p>
   
     <%= f.label "【居宅介護支援計画書の生活全般の解決すべき課題(ニーズ)", class: "label-#{yield(:class_text)}" %>
-    <br><%= f.text_area :monitoring_needs, class: "hoge", size: "50x7" %></br>
+    <br><%= f.text_area :monitoring_needs, class: "hoge", size: "70x7" %></br>
   
     <br><%= f.label "【居宅介護支援計画書の短期目標】", class: "label-#{yield(:class_text)}" %>
-    <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "50x7" %></br>
+    <br><%= f.text_area :monitoring_short_run_target, class: "hoge", size: "70x7" %></br>
   
     <br><%= f.label "基本的サービスの状況(ＡⅮⅬを含む)" ,class: "label-#{yield(:class_text)}" %></br>
     
     <tr>  
       <td align="center"><%= f.label "［他者交流］", class: "label-#{yield(:class_text)}" %>
-      <br><%= f.radio_button :monitoring_exchange, "保たれている" %>
+      <br><%= f.radio_button :monitoring_exchange, "保たれている", checked: "checked" %>
       <%= f.label "保たれている", class: "label-#{yield(:class_text)}" %>
       <%= f.radio_button :monitoring_exchange, "ほぼ保たれている" %>
       <%= f.label "ほぼ保たれている", class: "label-#{yield(:class_text)}" %>
@@ -33,7 +33,7 @@
         <br><%= f.label "［送迎］", class: "label-#{yield(:class_text)}" %></br>
             <%= f.radio_button :monitoring_go_to_home, "問題あり" %>
             <%= f.label "問題あり", class: "label-#{yield(:class_text)}" %>
-            <%= f.radio_button :monitoring_go_to_home, "問題なし" %>
+            <%= f.radio_button :monitoring_go_to_home, "問題なし", checked: "checked" %>
             <%= f.label "問題なし", class: "label-#{yield(:class_text)}" %>
        
         
@@ -41,77 +41,77 @@
         <!--歩行-->
         <br><%= f.label "［歩行］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button :monitoring_walking, :自立, checked: "checked" %>
-      <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :見守り, checked: "checked" %>
+      <%= f.label "自立", class: "label-#{yield(:class_text)}" %> 
+      <%= f.radio_button :monitoring_walking, :見守り%>
       <%= f.label "見守り", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :一部介助, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :一部介助 %>
       <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :介助, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :介助 %>
       <%= f.label "介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button :monitoring_walking, :車いす, checked: "checked" %>
+      <%= f.radio_button :monitoring_walking, :車いす %>
       <%= f.label "車いす", class: "label-#{yield(:class_text)}" %>
          
          <!--食事-->
         <br><%= f.label "［食事］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button  :monitoring_eating, :自立, checked: "checked" %>
       <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :一部介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :一部介助 %>
       <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-      <%= f.radio_button  :monitoring_eating, :全介助, checked: "checked" %>
+      <%= f.radio_button  :monitoring_eating, :全介助 %>
       <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <!--参加状況-->
         <br><%= f.label "［参加状況］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button  :monitoring_situation_of_participation, :毎回実施, checked: "checked" %>
         <%= f.label "毎回実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :ほぼ毎回実施, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :ほぼ毎回実施 %>
         <%= f.label "ほぼ毎回実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :時々実施, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :時々実施 %>
         <%= f.label "時々実施", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button  :monitoring_situation_of_participation, :あまりしない, checked: "checked" %>
+        <%= f.radio_button  :monitoring_situation_of_participation, :あまりしない %>
         <%= f.label "あまりしない", class: "label-#{yield(:class_text)}" %>
         
         <!--入浴-->
         <br><%= f.label "［入浴］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button :monitoring_both, :自立, checked: "checked" %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_both, :一部介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_both, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_both, :全介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_both, :全介助 %>
         <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "皮膚トラブル" , class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_both, class: "hoge", size: "40x3" %>
+        <br><%= f.text_area :monitoring_both, class: "hoge", size: "70x3" %>
         
         <!--更衣-->
          <br><%= f.label "［更衣］", class: "label-#{yield(:class_text)}" %>
          <br><%= f.radio_button :monitoring_changing_clothes, :自立, checked: "checked" %>
         <%= f.label "自立", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_changing_clothes, :一部介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_changing_clothes, :一部介助 %>
         <%= f.label "一部介助", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_changing_clothes, :全介助, checked: "checked" %>
+        <%= f.radio_button :monitoring_changing_clothes, :全介助 %>
         <%= f.label "全介助", class: "label-#{yield(:class_text)}" %>
         
         <!--社会参加-->
         <br><%= f.label"［社会参加］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button :monitoring_community, :参加している, checked: "checked" %>
         <%= f.label "参加している", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_community, :参加していない, checked: "checked" %>
+        <%= f.radio_button :monitoring_community, :参加していない %>
         <%= f.label "参加していない", class: "label-#{yield(:class_text)}" %>
-       <%= f.radio_button :monitoring_community, :実施なし, checked: "checked" %>
+       <%= f.radio_button :monitoring_community, :実施なし %>
         <%= f.label "実施なし", class: "label-#{yield(:class_text)}" %>
         
         <br><%= f.label "社会参加しているもの", class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_community, class: "hoge", size: "40x3" %>
+        <br><%= f.text_area :monitoring_community, class: "hoge", size: "70x3" %>
         
         <!--利用状況-->
         <br><%= f.label "［利用状況］", class: "label-#{yield(:class_text)}" %>
         <br><%= f.radio_button :monitoring_situation_dey, :休みなく利用, checked: "checked" %>
         <%= f.label "休みなく利用", class: "label-#{yield(:class_text)}" %>
-        <%= f.radio_button :monitoring_situation_dey, :休んだ日がある, checked: "checked" %>
+        <%= f.radio_button :monitoring_situation_dey, :休んだ日がある %>
         <%= f.label "休んだ日がある", class: "label-#{yield(:class_text)}" %>
         <br><%= f.label "休んだ日がある理由" , class: "label-#{yield(:class_text)}" %>
-        <br><%= f.text_area :monitoring_situation_dey, class: "hoge", size: "40x3" %>
+        <br><%= f.text_area :monitoring_situation_dey, class: "hoge", size: "70x3" %>
         
       </td>
     </tr>
@@ -120,21 +120,21 @@
         <td>
           <br><%= f.label "【日常生活上の留意点 及び 介護の工夫など(総合的評価)】", class: "label-#{yield(:class_text)}" %>
           <br>※ 上記の内容を詳しく 又は利用中の様子や気づいた点を記入
-          <br><%= f.text_area :monitoring_attention, class: "hoge", size: "50x10" %></br>
+          <br><%= f.text_area :monitoring_attention, class: "hoge", size: "70x10" %></br>
         </td>
         
       </tr>
         <td>
           <br><%= f.label "【サービス変更の必要性】", class: "label-#{yield(:class_text)}" %>
           
-          <br><%= f.radio_button :monitoring_service_need, :必要あり, checked: "checked" %>
+          <br><%= f.radio_button :monitoring_service_need, :必要あり %>
               <%= f.label "必要あり", class: "label-#{yield(:class_text)}" %>
               <%= f.radio_button :monitoring_service_need, :必要なし, checked: "checked" %>
               <%= f.label "必要なし", class: "label-#{yield(:class_text)}" %>
           <br><%= f.label "必要あり理由", class: "label-#{yield(:class_text)}" %>
-              <br><%= f.text_area :monitoring_service_need, class: "hoge", size: "40x3" %>
+              <br><%= f.text_area :monitoring_service_need, class: "hoge", size: "70x3" %>
           <br><%= f.label "確認", class: "label-#{yield(:class_text)}" %>
-              <%= f.check_box :check_monitoring, {}, "true", "false" %>
+              <%= f.check_box :check_monitoring, {checked: true}, "true", "false" %>
           <br><%= f.submit "追加", class: "btn btn-primary "  %>
         </td>
       <% end %>  
