--- a/app/views/clients/show.html.erb
+++ b/app/views/clients/show.html.erb
@@ -16,24 +16,21 @@
         <td>
       <% @monitorings.each do |monitoring| %>
         <br><%= link_to monitoring.monitoring_worked_on_year.strftime("%Y年")+monitoring.monitoring_worked_on_month.strftime("%m月"),monitoring_completion_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %>
-            <%= link_to "編集", monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-primary" %></br>
+            <%= link_to "編集", monitoring_basic_info_affter_client_monitoring_path(@client, monitoring), class: "btn btn-success" %>又は削除も可能</br>
       <% end %>
         <%= paginate(@monitorings) %>
         </td>
         <td>
         <% @asesments.each do |asesment| %>
           <br><%= link_to asesment.asesment_create_year.strftime("%Y年")+asesment.asesment_create_day.strftime("%-m月%-d日"), asesment_completion_client_asesment_path(@client,asesment), class: "btn btn-primary" %>
-          <%= link_to "編集", asesment_affter_client_asesment_path(@client, asesment), class: "btn btn-primary" %></br>
+          <%= link_to "編集", asesment_affter_client_asesment_path(@client, asesment), class: "btn btn-success" %>又は削除も可能</br>
         <% end %>
         <%= paginate(@asesments) %>
         </td>
         <td>
           <% @businesslogs.each do |log| %>
           <br><%= link_to log.log_year.strftime("%Y年")+log.log_month.strftime("%-m月%-d日"),businesslog_completion_client_businesslog_path(@client, log), class: "btn btn-primary" %>
-          <%= link_to "編集", affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-primary"%>
-          <%= link_to "削除", businesslog_delete_client_businesslogs_path(@client,log), method: :delete,
-                    data: { confirm: "削除してよろしいですか？" },
-                    class: "btn btn-danger" %></br>
+          <%= link_to "編集", affter_businesslog_client_businesslog_path(@client, log), class: "btn btn-success"%>又は削除も可能</br>
           <% end %>
           <%= paginate(@businesslogs) %>
           <br><%= link_to "業務日誌コピー専用ページ", businesslog_completion_copy_client_businesslog_path(@client, @businesslogs), class: "btn btn-info" %>
