--- a/app/views/asesments/asesment_affter.html.erb
+++ b/app/views/asesments/asesment_affter.html.erb
@@ -205,4 +205,7 @@
         <%= f.check_box :check_a, {checked: false}, "true", "false" %>
     <br><%= f.submit "編集", class: "btn btn-success" %>
   <% end %>
+  <br><%= link_to "削除", asesment_delete_client_asesment_path(@client, @asesment), method: :delete,
+                    data: { confirm: "削除してよろしいですか？" },
+                    class: "btn btn-danger" %>
 </div>        
